--- a/client/src/app/components/homepage/homepage.component.html
+++ b/client/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<div class=" row ">
+  <div class="col-sm-5 form-group not-perfect-centering">
      <mat-form-field>
         <mat-label>Search By</mat-label>
         <mat-select [(value)]="selected" (selectionChange)="updateAccountOwner()">
@@ -10,16 +11,20 @@
     <div>
     </div>
     <div class="row">
+      <div class=" col-sm-5 form-group">
         <button type="button" class="btn btn-success" (click)="showCurrentAccount()">show</button>
     </div>
 </div>
+</div>
 
-
+<div class="perfect-centering">
 <table class="table table-striped">
     <thead>
     <tr>
-      <th scope="col">account</th>
-      <th scope="col">acrion type</th>
+      <th scope="col">account number</th>
+      <th scope="col">action type</th>
+      <th scope="col">date</th>
+      <th scope="col">amount</th>
     </tr>
     </thead>
     <tbody>
@@ -32,4 +37,5 @@
     </tr> 
     </tbody>
   </table>
+  </div>
  
